Started Adding AI

--- a/manifest.json
+++ b/manifest.json
@@ -3,14 +3,14 @@
   "name": "Reddit-It",
   "version": "1.0",
   "description": "Adds Reddit results to Google Search",
-  "permissions": ["activeTab", "storage"],
+  "permissions": ["activeTab", "storage", "https://api.openai.com/"],
   "action": {
     "default_popup": "popup.html"
   },
   "content_scripts": [
     {
       "matches": ["*://www.google.com/search*"],
-      "js": ["content.js"]
+      "js": ["apiKey.js", "content.js"]
     }
   ]
 }
